--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -96,16 +96,16 @@
 			</h3>
 			<div class="row clearfix">
 				<div class="col-md-3 column" >
-					<img alt="140x140" src="./pixel_img/01.png" class="img-thumbnail" />
+					<img alt="140x140" src="./pixel_img/01.png" class="img-polaroid" />
 				</div>
 				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/02.png" class="img-rounded"/>
+					<img alt="140x140" src="./pixel_img/02.png" class="img-polaroid"/>
 				</div>
 				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/04.png" class="img-circle"/>
+					<img alt="140x140" src="./pixel_img/04.png" class="img-polaroid"/>
 				</div>
 				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/05.png" class="img-rounded"/>
+					<img alt="140x140" src="./pixel_img/05.png" class="img-polaroid"/>
 				</div>
 			</div>
 			<p class="lead text-center">
