--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="upper ">
-        <img src="./img/airo.png " alt=" " id="upper_img">
+        <img src="./img/airo.png " alt="哎呀不见了！" id="upper_img">
     </div>
 
     <!-- 推荐区域 -->
