--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>SLIMU RUSH弹幕射击独立游戏</title>
+    <meta name="description" content="SLIMU RUSH-弹幕射击独立游戏,游戏,电脑,PC,移动端,多人,联机,RPG,手机" />
+    <meta name="Keywords" content="Steam 游戏 电脑 PC 多人联机 RPG 手机 独立游戏" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-    <title>首页</title>
+
     <link rel="stylesheet" href="css/style.css">
     <script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 
@@ -112,7 +116,7 @@
         <img src="./img/airo.png " alt="哎呀不见了！" id="upper_img">
     </div>
 
-    <!-- 推荐区域 -->
+    <!-- 推荐区域1 -->
     <div class="goods w ">
         <h3>游戏推荐</h3>
         <ul>
