--- a/GASP动画.html
+++ b/GASP动画.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <h2>1.简单渐变动画</h2>
     <div>
         <img src="./asset/img/logo.png" alt="" id="mylogo">
         <p id="logo_info">WELCOME TO SLIMU RUSH</p>
