--- a/GSAP动画.html
+++ b/GSAP动画.html
@@ -46,6 +46,13 @@
     <button onclick=tl.timeScale(0.5)>变慢到0.5倍</button>
     <button onclick=tl.timeScale(1)>正常速度</button>
     <button onclick=tl.timeScale(1.5)>加快到1.5倍</button>
+
+    <hr>
+
+    <h2>2.反复横跳</h2>
+    <div style="width:550px; height: 200px; line-height: 270px;  border: 2px solid #e4e4e4;">
+        <img src="./img/logo.png" alt="" id="mylogo2" style="width: 100px; margin-left: 20px;">
+    </div>
     <script type="text/javascript">
         var tl = new TimelineLite();
         tl.set("#mylogo", {
@@ -68,6 +75,18 @@
 
         tl.timeScale(1.5); //设置动画速度
         tl.play();
+    </script>
+
+    <script type="text/javascript">
+        var tl2 = new TimelineMax({
+            repeat: -1,
+            yoyo: true
+        });
+        tl2.to("#mylogo2", 3, {
+            x: 400,
+            rotation: 360,
+            scale: 0.5
+        });
     </script>
 </body>
 
