--- a/GSAP动画.html
+++ b/GSAP动画.html
@@ -80,6 +80,7 @@
     <script type="text/javascript">
         var tl2 = new TimelineMax({
             repeat: -1,
+            ease: Power1.easeInOut,
             yoyo: true
         });
         tl2.to("#mylogo2", 3, {
