--- a/GSAP动画.html
+++ b/GSAP动画.html
@@ -26,6 +26,7 @@
     </script>
     <script src="./js/greensock-js/src/minified/TweenMax.min.js">
     </script>
+    <script src="./js/greensock-js/src/minified/plugins/TextPlugin.min.js"></script>
 </head>
 
 <body>
@@ -53,6 +54,17 @@
     <div style="width:550px; height: 200px; line-height: 270px;  border: 2px solid #e4e4e4;">
         <img src="./img/logo.png" alt="" id="mylogo2" style="width: 100px; margin-left: 20px;">
     </div>
+
+    <hr>
+
+    <h2>3.贝塞尔曲线</h2>
+    <div style="margin-top: 20px; width:550px; height: 200px; line-height: 270px;  border: 2px solid #e4e4e4;">
+        <img src="./img/logo.png" alt="" id="mylogo3" style="width: 64px; margin-left: 20px;">
+    </div>
+
+    <hr>
+    <h2>4.文本特效</h2>
+    <p id="text1"></p>
     <script type="text/javascript">
         var tl = new TimelineLite();
         tl.set("#mylogo", {
@@ -91,6 +103,76 @@
             rotationY: 360,
             scale: 0.5
         });
+    </script>
+
+    <script type="text/javascript">
+        TweenMax.to('#mylogo3', 5, {
+            repeat: -1,
+            yoyo: true,
+            bezier: {
+                values: [{
+                    x: 0,
+                    y: 0
+                }, {
+                    x: 150,
+                    y: -50
+                }, {
+                    x: 300,
+                    y: 50
+                }, {
+                    x: 450,
+                    y: 0
+                }],
+                autoRotate: true
+            },
+            ease: Power1.easeInOut
+        });
+    </script>
+
+    <script type="text/javascript">
+        var tl4 = new TimelineMax({
+            repeat: -1
+        });
+        tl4.to("#text1", 2, {
+                text: {
+                    value: "WELCOME",
+                    newClass: "class2",
+                    oldClass: "class1"
+                },
+                ease: Linear.easeNone
+            })
+            .to("#text1", 2, {
+                text: {
+                    value: "TO",
+                    newClass: "class2",
+                    oldClass: "class1"
+                },
+                ease: Linear.easeNone
+            })
+            .to("#text1", 2, {
+                text: {
+                    value: "THE",
+                    newClass: "class2",
+                    oldClass: "class1"
+                },
+                ease: Linear.easeNone
+            })
+            .to("#text1", 2, {
+                text: {
+                    value: "SLIMU RUSH!!!",
+                    newClass: "class2",
+                    oldClass: "class1"
+                },
+                ease: Linear.easeNone
+            })
+            .to("#text1", 2, {
+                text: {
+                    value: "THANK YOU",
+                    newClass: "class2",
+                    oldClass: "class1"
+                },
+                ease: Linear.easeNone
+            });
     </script>
 </body>
 
