--- a/GSAP动画.html
+++ b/GSAP动画.html
@@ -29,6 +29,7 @@
     <script src="./js/greensock-js/src/minified/plugins/TextPlugin.min.js"></script>
     <script src="./js/greensock-js/src/minified/plugins/ScrollToPlugin.min.js"></script>
     <script src="./js/greensock-js/src/minified/plugins/ModifiersPlugin.min.js"></script>
+    <script src="./js/greensock-js/src/SplitText.min.js"></script>
 </head>
 
 <body>
@@ -334,15 +335,20 @@
     </script>
 
     <script type="text/javascript">
+        var splitTitle = new SplitText($("#title_fx_1"));
+        var splitTitle2 = new SplitText($("#title_fx_2"));
+        var revertTitle = function() {
+            splitTitle.revert();
+        }
         TweenLite.set("#title_fx_1", {
-            perspective: 400
+            perspective: 400,
         });
 
         var tl = new TimelineMax({
             repeat: -1,
-            yoyo: true
+            yoyo: true,
         });
-        tl.staggerFrom("#title_fx_1", 0.8, {
+        tl.staggerFrom(splitTitle.chars, 0.8, {
             opacity: 0,
             scale: 0,
             y: 80,
